--- a/doc/changelog.asciidoc
+++ b/doc/changelog.asciidoc
@@ -15,6 +15,16 @@ breaking changes (such as renamed commands) can happen in minor releases.
 // `Fixed` for any bug fixes.
 // `Security` to invite users to upgrade in case of vulnerabilities.
 
+[[v3.2.0]]
+v3.2.0 (unreleased)
+-------------------
+
+
+[[v3.1.1]]
+v3.1.1 (unreleased)
+-------------------
+
+
 [[v3.1.0]]
 v3.1.0 (2023-12-08)
 -------------------
